[package]
name = "assert_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_parse_core = { path = "./assert_parse_core" }

[workspace]
members = [ "assert_parse_core", "register_assert_macro" ]
