[package]
name = "assert_parse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The util to assert macro parsing."
readme = "README.md"
repository = "https://github.com/NULL-header/assert_parse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_parse_core = { path = "./assert_parse_core", version = "1.0" }

[workspace]
members = [ "assert_parse_core", "register_assert_macro" ]
