[package]
name = "assert-parse-register-assert-macro"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/NULL-header/assert-parse"
description = "The util macro for 'assert-parse'"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
proc-macro2="1.0"
rstest="0.13"
thiserror="1.0"
quote = "1.0"

[dev-dependencies]
assert-parse-core = { path = "../assert_parse_core", version = "1.0" }
